--- a/src/front/main.html
+++ b/src/front/main.html
@@ -148,6 +148,66 @@
                                 <td class="tr__td td-companyName">Yahoo</td>
                                 <td class="tr__button"><button class="panel__control-delete panel-control-style delete-person">&#128465;</button></td>
                             </tr>
+                            <tr class="tbody__tr">
+                                <td class="tr__td td-firstName">Ivan</td>
+                                <td class="tr__td td-lastName">Ivanov</td>
+                                <td class="tr__td td-age">25</td>
+                                <td class="tr__td td-city">Dnepr</td>
+                                <td class="tr__td td-phoneNumber">024 567 84 34</td>
+                                <td class="tr__td td-email">ivanivanov@yahoo.com</td>
+                                <td class="tr__td td-companyName">Google</td>
+                                <td class="tr__button"><button class="panel__control-delete panel-control-style delete-person">&#128465;</button></td>
+                            </tr>
+                            <tr class="tbody__tr">
+                                <td class="tr__td td-firstName">Petya</td>
+                                <td class="tr__td td-lastName">Petrov</td>
+                                <td class="tr__td td-age">24</td>
+                                <td class="tr__td td-city">Zhovti Vody</td>
+                                <td class="tr__td td-phoneNumber">0245678434</td>
+                                <td class="tr__td td-email">petyapetrow@yahoo.com</td>
+                                <td class="tr__td td-companyName">Yahoo</td>
+                                <td class="tr__button"><button class="panel__control-delete panel-control-style delete-person">&#128465;</button></td>
+                            </tr>
+                            <tr class="tbody__tr">
+                                <td class="tr__td td-firstName">Ivan</td>
+                                <td class="tr__td td-lastName">Ivanov</td>
+                                <td class="tr__td td-age">25</td>
+                                <td class="tr__td td-city">Dnepr</td>
+                                <td class="tr__td td-phoneNumber">024 567 84 34</td>
+                                <td class="tr__td td-email">ivanivanov@yahoo.com</td>
+                                <td class="tr__td td-companyName">Google</td>
+                                <td class="tr__button"><button class="panel__control-delete panel-control-style delete-person">&#128465;</button></td>
+                            </tr>
+                            <tr class="tbody__tr">
+                                <td class="tr__td td-firstName">Petya</td>
+                                <td class="tr__td td-lastName">Petrov</td>
+                                <td class="tr__td td-age">24</td>
+                                <td class="tr__td td-city">Zhovti Vody</td>
+                                <td class="tr__td td-phoneNumber">0245678434</td>
+                                <td class="tr__td td-email">petyapetrow@yahoo.com</td>
+                                <td class="tr__td td-companyName">Yahoo</td>
+                                <td class="tr__button"><button class="panel__control-delete panel-control-style delete-person">&#128465;</button></td>
+                            </tr>
+                            <tr class="tbody__tr">
+                                <td class="tr__td td-firstName">Ivan</td>
+                                <td class="tr__td td-lastName">Ivanov</td>
+                                <td class="tr__td td-age">25</td>
+                                <td class="tr__td td-city">Dnepr</td>
+                                <td class="tr__td td-phoneNumber">024 567 84 34</td>
+                                <td class="tr__td td-email">ivanivanov@yahoo.com</td>
+                                <td class="tr__td td-companyName">Google</td>
+                                <td class="tr__button"><button class="panel__control-delete panel-control-style delete-person">&#128465;</button></td>
+                            </tr>
+                            <tr class="tbody__tr">
+                                <td class="tr__td td-firstName">Pedvddfvdfvddftya</td>
+                                <td class="tr__td td-lastName">Petdfvfvdfvdfvdfvrov</td>
+                                <td class="tr__td td-age">24</td>
+                                <td class="tr__td td-city">Zhovti Vody</td>
+                                <td class="tr__td td-phoneNumber">0245678434</td>
+                                <td class="tr__td td-email">petyapedfvdfvdtrow@yahoo.com</td>
+                                <td class="tr__td td-companyName">Yadfvdfvdfvdfvfdvdfhoo</td>
+                                <td class="tr__button"><button class="panel__control-delete panel-control-style delete-person">&#128465;</button></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -173,11 +233,11 @@
                 <span class="settingsPopup__header-help" data-translate="help">you can change your password and login</span>
                 <div class="settingsPopup__group">
                     <input type="text" name="newLogin" id="newLogin" data-placeholder="newLogin" placeholder="New login" class="settingsPopup__group-newlogin" data-clear="clear">
-                    <input type="password" name="yourPassword" id="yourPassword" data-placeholder="yourPassword" placeholder="Your password" class="settingsPopup__group-yourPassword settingsPopup__input" data-clear="clear">
+                    <input type="password" name="yourPassword" id="yourPassword" data-placeholder="yourPassword" placeholder="Your password" class="settingsPopup__group-yourPassword settingsPopup__input" data-clear="clear" data-show="password">
                     <span class="eye">&#128065;</span>
-                    <input type="password" name="newPassword" id="newPassword" data-placeholder="newPassword" placeholder="New password" class="settingsPopup__group-newPassword settingsPopup__input" data-clear="clear">
+                    <input type="password" name="newPassword" id="newPassword" data-placeholder="newPassword" placeholder="New password" class="settingsPopup__group-newPassword settingsPopup__input" data-clear="clear" data-show="password" >
                     <span class="eye">&#128065;</span>
-                    <input type="password" name="repeatPassword" id="repeatPassword" data-placeholder="repeatPassword" placeholder="Repeat password" class="settingsPopup__group-repeatPassword settingsPopup__input" data-clear="clear">
+                    <input type="password" name="repeatPassword" id="repeatPassword" data-placeholder="repeatPassword" placeholder="Repeat password" class="settingsPopup__group-repeatPassword settingsPopup__input" data-clear="clear" data-show="password" >
                     <span class="eye">&#128065;</span>
                     
                 </div>
