--- a/src/front/index.html
+++ b/src/front/index.html
@@ -36,8 +36,8 @@
                     </div>
                 </div>
                 <div class="auth__auth">
-                    <label for="authpass" class="auth__label">login</label>
-                    <input type="text" id="authpass" class="auth__input" placeholder="Enter your login here">
+                    <label for="authlogin" class="auth__label">login</label>
+                    <input type="text" id="authlogin" class="auth__input" placeholder="Enter your login here">
                     <label for="authpass" class="auth__label auth__label-mt35">PASSWORD</label>
                     <input type="password" id="authpass" class="auth__input" placeholder="Enter your password here">
                     <button class="auth__btn">SIGN IN</button>
