--- a/src/front/main.html
+++ b/src/front/main.html
@@ -46,23 +46,23 @@
                     <div class="panel__inputs">
                         <label for="firstName" class="panel__label">
                             <span data-translate="firstName">First name</span>
-                            <input type="text" name="firstName" id="firstnameInput" class="panel__inputs-firstName panel__input" data-placeholder="firstName" placeholder="First name" maxlength="21">
+                            <input type="text" name="firstName" id="firstnameInput" class="panel__inputs-firstName panel__input" data-placeholder="firstName" placeholder="First name" minlength="1" maxlength="20" required>
                         </label>
                         <label for="city" class="panel__label">
                             <span data-translate="city">City</span>
-                            <input type="text" name="city" id="cityInput" class="panel__inputs-city panel__input" data-placeholder="city" placeholder="City" maxlength="21">
+                            <input type="text" name="city" id="cityInput" class="panel__inputs-city panel__input" data-placeholder="city" placeholder="City" minlength="1" maxlength="20" required>
                         </label>
                         <label for="email" class="panel__label">
                             <span data-translate="email">Email</span>
-                            <input type="email" name="email" id="emailInput" class="panel__inputs-email panel__input" data-placeholder="email" placeholder="Email" maxlength="21">
+                            <input type="email" name="email" id="emailInput" class="panel__inputs-email panel__input" data-placeholder="email" placeholder="Email" maxlength="20" required>
                         </label>
                         <label for="lastName" class="panel__label">
                             <span data-translate="lastName">Last name</span>
-                            <input type="text" name="lastName" id="lastnameInput" class="panel__inputs-lastName panel__input" data-placeholder="lastName" placeholder="Last name" maxlength="21">
+                            <input type="text" name="lastName" id="lastnameInput" class="panel__inputs-lastName panel__input" data-placeholder="lastName" placeholder="Last name" minlength="10" maxlength="20">
                         </label>
                         <label for="phone" class="panel__label">
                             <span data-translate="phone">Phone number</span>
-                            <input type="tel" name="phone" id="phonenumberInput" class="panel__inputs-phone panel__input" data-placeholder="phone" placeholder="Phone number">
+                            <input type="tel" name="phone" id="phonenumberInput" class="panel__inputs-phone panel__input"  pattern="([0-9]{3})-[0-9]{3}-[0-9]{4}" minlength="12" maxlength="12" data-placeholder="phone" placeholder="Phone number">
                         </label>
                         <label for="company" class="panel__label">
                             <span data-translate="company">Company name</span>
