--- a/src/front/main.html
+++ b/src/front/main.html
@@ -233,8 +233,8 @@
                 <span class="settingsPopup__header-help" data-translate="help">you can change your password and login</span>
                 <div class="settingsPopup__group">
                     <input type="text" name="newLogin" id="newLogin" data-placeholder="newLogin" placeholder="New login" class="settingsPopup__group-newlogin" data-clear="clear">
-                    <input type="password" name="yourPassword" id="yourPassword" data-placeholder="yourPassword" placeholder="Your password" class="settingsPopup__group-yourPassword settingsPopup__input" data-clear="clear" data-show="password">
-                    <span class="eye">&#128065;</span>
+                    <!-- <input type="password" name="yourPassword" id="yourPassword" data-placeholder="yourPassword" placeholder="Your password" class="settingsPopup__group-yourPassword settingsPopup__input" data-clear="clear" data-show="password">
+                    <span class="eye">&#128065;</span> -->
                     <input type="password" name="newPassword" id="newPassword" data-placeholder="newPassword" placeholder="New password" class="settingsPopup__group-newPassword settingsPopup__input" data-clear="clear" data-show="password" >
                     <span class="eye">&#128065;</span>
                     <input type="password" name="repeatPassword" id="repeatPassword" data-placeholder="repeatPassword" placeholder="Repeat password" class="settingsPopup__group-repeatPassword settingsPopup__input" data-clear="clear" data-show="password" >
