triangles and sort text content implemented

--- a/src/front/main.html
+++ b/src/front/main.html
@@ -82,6 +82,8 @@
                 <div id="table" class="table">
                     <div class="table__panel">
                         <ul class="table__nav">
+                        <span class="table__nav-triangleBD">&#9660;</span>
+                        <span class="table__nav-triangleSort">&#9660;</span>
                             <li><a class="table__nav-dms" id="dms">MySQL</a>
                               <ul class="table__dmsDropdown">
                                 <li><a class="table__nav-hover" id="MySQL">MySQL</a></li>
@@ -93,7 +95,7 @@
                                 <li><a class="table__nav-hover" id="Neo4j">Neo4j</a></li>
                               </ul>
                             </li>
-                            <li><a id="sort" class="table__nav-sort"><span data-translate="sort">Sort</span></a>
+                            <li><a id="sort" class="table__nav-sort">First name</a>
                               <ul class="table__sortDropdown">
                                 <li><a class="table__nav-hover" id="firstNameSort"><span data-translate="firstName">First name</span></a></li>
                                 <li><a class="table__nav-hover" id="lastnameSort"><span data-translate="lastName">Last name</span></a></li>
