--- a/src/front/main.html
+++ b/src/front/main.html
@@ -80,10 +80,13 @@
                     </div>
                 </div>
                 <div id="table" class="table">
+                    
                     <div class="table__panel">
                         <ul class="table__nav">
                         <span class="table__nav-triangleBD">&#9660;</span>
                         <span class="table__nav-triangleSort">&#9660;</span>
+                        <span data-translate="db" class="table__nav-db">Data base</span>
+                        
                             <li><a class="table__nav-dms" id="dms">MySQL</a>
                               <ul class="table__dmsDropdown">
                                 <li><a class="table__nav-hover" id="MySQL">MySQL</a></li>
@@ -95,15 +98,15 @@
                                 <li><a class="table__nav-hover" id="Neo4j">Neo4j</a></li>
                               </ul>
                             </li>
-                            <li><a id="sort" class="table__nav-sort">First name</a>
+                            <li><a id="sort" class="table__nav-sort" data-translate="firstName"></a><span data-translate="sortLabel" class="table__nav-srt sortLabel"></span>
                               <ul class="table__sortDropdown">
-                                <li><a class="table__nav-hover" id="firstNameSort"><span data-translate="firstName">First name</span></a></li>
-                                <li><a class="table__nav-hover" id="lastnameSort"><span data-translate="lastName">Last name</span></a></li>
-                                <li><a class="table__nav-hover" id="ageSort"><span data-translate="age">Age</span></a></li>
-                                <li><a class="table__nav-hover" id="citySort"><span data-translate="city">City</span></a></li>
-                                <li><a class="table__nav-hover" id="phonenumberSort"><span data-translate="phone">Phone number</span></a></li>
-                                <li><a class="table__nav-hover" id="emailSort"><span data-translate="email">Email</span></a></li>
-                                <li><a class="table__nav-hover" id="companynameSort"><span data-translate="company">Company name</span></a></li>
+                                <li><a class="table__nav-hover" id="firstNameSort" data-translate="firstName">First name</a></li>
+                                <li><a class="table__nav-hover" id="lastnameSort" data-translate="lastName">Last name</a></li>
+                                <li><a class="table__nav-hover" id="ageSort" data-translate="age">Age</a></li>
+                                <li><a class="table__nav-hover" id="citySort" data-translate="city">City</a></li>
+                                <li><a class="table__nav-hover" id="phonenumberSort" data-translate="phone">Phone number</a></li>
+                                <li><a class="table__nav-hover" id="emailSort" data-translate="email">Email</a></li>
+                                <li><a class="table__nav-hover" id="companynameSort" data-translate="company">Company name</a></li>
                               </ul>
                             </li>
                            </ul>
