--- a/src/front/main.html
+++ b/src/front/main.html
@@ -70,7 +70,7 @@
                         </label>
                         <label for="age" class="panel__label">
                             <span data-translate="age">Age</span>
-                            <input type="number" name="age" id="ageInput" class="panel__inputs-age panel__input" data-placeholder="age" placeholder="Age" min="0" max="200" maxlength="3">
+                            <input type="number" name="age" id="ageInput" class="panel__inputs-age panel__input" data-placeholder="age" placeholder="Age" min="0" max="200" maxlength="3" onkeydown="return event.keyCode !== 69">
                         </label>
                         <div class="panel__control">
                             <button id="create" class="panel__control-create panel-control-style"><span data-translate="create">Create</span></button>
